added tactical terrain features: forests, swamps, and rocks